# shitfest-bot

./: Cargo.toml
src/: bot.rs  commands.rs  lib.rs  main.rs  secrets.rs
