[package]
name = "shitfest-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
toml = "0.8.8"
lazy_static = "1.4.0"
poise = "0.6.1-rc1"
env_logger = "0.10.1"
mysql = "24.0.0"

[profile.release]
lto = true
